--- a/Notebooks/Introduction_to_Python.ipynb
+++ b/Notebooks/Introduction_to_Python.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOeuV29gesVnGVWn7sY/YeN",
+      "authorship_tag": "ABX9TyN94d37EdMT/+Mfz1djz+oo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
       },
       "source": [
         "# [Contents](https://github.com/SWARUP-Selvaraj/python-training/blob/main/Notebooks/Introduction_to_Python.ipynb)\n",
-        "* [Introduction](#scrollTo=MCn03hSeWznx)\n",
-        "* [Why Python?](#scrollTo=iOIgmj5IZDiJ)\n",
-        "* [Getting Started](#scrollTo=7dUh3kQ2g2EO)\n",
-        "* [Further Practise](#scrollTo=NTEeZQCXlRHL)"
+        "* [1.0 Introduction](#scrollTo=MCn03hSeWznx)\n",
+        "* [2.0 Why Python?](#scrollTo=iOIgmj5IZDiJ)\n",
+        "* [3.0 Getting Started](#scrollTo=7dUh3kQ2g2EO)\n",
+        "* [4.0 References](#scrollTo=Uy3TgKU8oPWY)"
       ]
     },
     {
@@ -47,7 +47,7 @@
       "source": [
         "\n",
         "\n",
-        "# [Introduction](#scrollTo=7Yg2gYK_Yzvm)\n",
+        "# [1.0 Introduction🐍](#scrollTo=7Yg2gYK_Yzvm)\n",
         "\n",
         "[Python](https://en.wikipedia.org/wiki/Python_(programming_language)) is an interpreted, high-level and general-purpose programming language.\n",
         "\n",
@@ -64,7 +64,7 @@
         "id": "iOIgmj5IZDiJ"
       },
       "source": [
-        "# [Why Python?](#scrollTo=7Yg2gYK_Yzvm)\n",
+        "# [2.0 Why Python❓](#scrollTo=7Yg2gYK_Yzvm)\n",
         "\n",
         "Python is the programming language of choice for the Scientific and Engineering Community.\n",
         "\n",
@@ -87,7 +87,11 @@
         "id": "7dUh3kQ2g2EO"
       },
       "source": [
-        "# [Getting Started](#scrollTo=7Yg2gYK_Yzvm)\n"
+        "# [3.0 Getting Started 🚀](#scrollTo=7Yg2gYK_Yzvm)\r\n",
+        "\r\n",
+        "There are multiple ways to work with python.  The most common way is to install an IDE (Integrated Development Environment) in your computer and use it to write and execute python scripts.\r\n",
+        "\r\n",
+        "A list of recommended Python IDE is listed in its official website https://wiki.python.org/moin/IntegratedDevelopmentEnvironments"
       ]
     },
     {
@@ -97,10 +101,23 @@
       },
       "source": [
         "\n",
-        "## [Colaboratory](#scrollTo=7dUh3kQ2g2EO)\n",
+        "## [3.1 Colaboratory](#scrollTo=7dUh3kQ2g2EO)\n",
         "[Colaboratory](https://colab.research.google.com/) is a free to use python virtual environment provided by Google.\n",
         "\n",
         "It is the most easiest way to getting started with python and could be accessed by visiting https://colab.research.google.com/ from your browser.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zczevqepplzI"
+      },
+      "source": [
+        "## [3.2 Thonny](#scrollTo=7dUh3kQ2g2EO)\r\n",
+        "\r\n",
+        "[Thonny](https://thonny.org/) is a wonderful Integrated Development Environment for python beginners.\r\n",
+        "\r\n",
+        "You can download and install (Admin rights NOT required) it from https://github.com/thonny/thonny/releases/download/v3.3.0/thonny-3.3.0.exe"
       ]
     },
     {
@@ -110,8 +127,8 @@
       },
       "source": [
         "\n",
-        "## [IDLE](#scrollTo=7dUh3kQ2g2EO)\n",
-        "IDLE is the default Integrated DeveLopment Environment for python.  You can download and install it from https://www.python.org/downloads/\n"
+        "## [3.3 IDLE](#scrollTo=7dUh3kQ2g2EO)\n",
+        "IDLE is the default Integrated Development Environment for python.  You can download and install it from https://www.python.org/downloads/\n"
       ]
     },
     {
@@ -121,7 +138,7 @@
       },
       "source": [
         "\n",
-        "## [Anaconda](#scrollTo=7dUh3kQ2g2EO)\n",
+        "## [3.4 Anaconda](#scrollTo=7dUh3kQ2g2EO)\n",
         "Anaconda is an open source distribution of python.  It comes pre-packaged with [Jupyter Notebook](https://jupyter.org/) and [SPyDEr](https://www.spyder-ide.org/).\n",
         "You can download and install it from https://www.anaconda.com/products/individual#Downloads\n",
         "\n",
@@ -135,7 +152,7 @@
       },
       "source": [
         "\n",
-        "## [PyCharm](#scrollTo=7dUh3kQ2g2EO)\n",
+        "## [3.5 PyCharm](#scrollTo=7dUh3kQ2g2EO)\n",
         "PyCharm is a Freemium IDE for python.\n",
         "\n",
         "You can download and install it from https://www.jetbrains.com/pycharm/download/#section=windows\n",
@@ -146,229 +163,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NTEeZQCXlRHL"
+        "id": "Uy3TgKU8oPWY"
       },
       "source": [
-        "# [Further Practise](#scrollTo=7Yg2gYK_Yzvm)\n",
+        "# [4.0 References🧙‍♂️](#scrollTo=7Yg2gYK_Yzvm)\n",
         "\n",
+        "1. [Language Reference](https://docs.python.org/3/reference/)\n",
+        "1. [Library Reference](https://docs.python.org/3/library/)\n",
+        "1. [Learning References](https://github.com/SWARUP-Selvaraj/python-training/blob/main/Notebooks/Learning_References.ipynb)\n",
+        "1. [Introduction to Colab](https://colab.research.google.com/notebooks/intro.ipynb)\n",
         "1. [Python Tutorial](https://colab.research.google.com/github/cs231n/cs231n.github.io/blob/master/python-colab.ipynb)\n",
-        "1. [Python Data Science Handbook](https://colab.research.google.com/github/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/Index.ipynb)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dhjFHxqR3fCf"
-      },
-      "source": [
-        "# [Python Crash Course](#scrollTo=7Yg2gYK_Yzvm)\n",
+        "1. [Python Data Science Handbook](https://colab.research.google.com/github/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/Index.ipynb)\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hop7_JBb31it"
-      },
-      "source": [
-        "## [Python Keywords](#scrollTo=dhjFHxqR3fCf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "id": "QEn5GlMjo_RC",
-        "outputId": "04c3ff92-9fa9-42e5-aa3b-513c53b39e54"
-      },
-      "source": [
-        "from IPython.display import HTML\n",
-        "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/mrfzbpfnhq\" width=\"560\" height=\"315\">')"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://fast.wistia.net/embed/iframe/mrfzbpfnhq\" width=\"560\" height=\"315\">"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9W0P-p124ckp"
-      },
-      "source": [
-        "## [Basic Data Types](#scrollTo=dhjFHxqR3fCf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "id": "d9CSpRyx3P2N",
-        "outputId": "cc5421e0-b639-4a5a-a5e3-a5d05b868e45"
-      },
-      "source": [
-        "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/lmx4ap23kp\" width=\"560\" height=\"315\">')"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://fast.wistia.net/embed/iframe/lmx4ap23kp\" width=\"560\" height=\"315\">"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dd5LmWW64jOI"
-      },
-      "source": [
-        "## [Complex Data Type](#scrollTo=dhjFHxqR3fCf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "id": "9ZPMKk273SNL",
-        "outputId": "8b632249-7b3b-4097-a89f-2a84533ec56d"
-      },
-      "source": [
-        "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/a4dz6ofmt3\" width=\"560\" height=\"315\">')"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://fast.wistia.net/embed/iframe/a4dz6ofmt3\" width=\"560\" height=\"315\">"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wEZL7WIj4p3U"
-      },
-      "source": [
-        "## [Classes and Objects](#scrollTo=dhjFHxqR3fCf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "id": "Z429GQup3Uak",
-        "outputId": "34cd7070-0738-4c2e-f0b1-4004c7ce8023"
-      },
-      "source": [
-        "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/g1o6xa9gcp\" width=\"560\" height=\"315\">')"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://fast.wistia.net/embed/iframe/g1o6xa9gcp\" width=\"560\" height=\"315\">"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Jky7n5qR4wS2"
-      },
-      "source": [
-        "## [Python Tricks](#scrollTo=dhjFHxqR3fCf)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        },
-        "id": "lDernUQW3V80",
-        "outputId": "399c9486-cc19-4d87-ccf3-7426a2336f1a"
-      },
-      "source": [
-        "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/j8gm5bh67g\" width=\"560\" height=\"315\">')"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<iframe src=\"https://fast.wistia.net/embed/iframe/j8gm5bh67g\" width=\"560\" height=\"315\">"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
       ]
     }
   ]
