Included Learn from the Creators

--- a/Notebooks/Learning_References.ipynb
+++ b/Notebooks/Learning_References.ipynb
@@ -6,7 +6,7 @@
       "name": "Learning References.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3vM71ZdMF47dyJGh6zJCD",
+      "authorship_tag": "ABX9TyN0ESAqxr/R+Rl7Ca0HPIx8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hWX0yWCwz1KF"
+      },
+      "source": [
+        "# Contents\r\n",
+        "1. [Where to Learn Python From?](#scrollTo=QTvHnjq2l7Yd)\r\n",
+        "1. [Websites](#scrollTo=gVy3YsQGctgo)\r\n",
+        "1. [Finxter Email Academy](#scrollTo=PMlFfUhnZyVK)\r\n",
+        "1. [Learn from the Creators](#scrollTo=sM0lW0gU0sxx)\r\n",
+        "1. [References](#scrollTo=EfSb9aED-gVR)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "QTvHnjq2l7Yd"
       },
       "source": [
-        "# 1 Where to Learn Python From?\r\n",
+        "# [1. Where to Learn Python From?](#scrollTo=hWX0yWCwz1KF)\r\n",
         "\r\n",
+        "There could be no better answer than \r\n",
         "\r\n",
+        "https://www.python.org/doc/\r\n",
         "\r\n",
         "\r\n"
       ]
@@ -44,7 +60,13 @@
         "id": "gVy3YsQGctgo"
       },
       "source": [
-        "# 2 Websites"
+        "# [2. Websites](#scrollTo=hWX0yWCwz1KF)\r\n",
+        "\r\n",
+        "**[Official Documentation](https://www.python.org/doc/)** should be the **first reference** place.  There are NO better documentation for Python.\r\n",
+        "\r\n",
+        "There are some websites which provide problem driven learning experience by explaining how to solve a problem using Python.\r\n",
+        "\r\n",
+        "We cannot learn without Practicing.  In this section, I am listing few of the popular websites which could accelerate your learning."
       ]
     },
     {
@@ -53,7 +75,7 @@
         "id": "ifsaFYHKczXp"
       },
       "source": [
-        "## 2.1 Automate the Boring Stuff with Python\r\n",
+        "## [2.1 Automate the Boring Stuff with Python](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A wonderful book on how to automate the boring stuffs with python is available in the below link:\r\n",
         "https://automatetheboringstuff.com/"
@@ -65,7 +87,7 @@
         "id": "O1MnwysFdqY2"
       },
       "source": [
-        "## 2.2 HackerRank\r\n",
+        "## [2.2 HackerRank](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A website where you can learn python by solving problems.\r\n",
         "https://www.hackerrank.com/domains/python"
@@ -77,7 +99,7 @@
         "id": "JVXpj26pjvx7"
       },
       "source": [
-        "## 2.3 SoloLearn\r\n",
+        "## [2.3 SoloLearn](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A web based python course available at https://www.sololearn.com/Course/Python"
       ]
@@ -88,7 +110,7 @@
         "id": "7a1pA-lLkQWd"
       },
       "source": [
-        "## 2.4 w3schools\r\n",
+        "## [2.4 w3schools](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A web based tutorial for python available at https://www.w3schools.com/python/"
       ]
@@ -99,7 +121,7 @@
         "id": "nZcIKdItkm9h"
       },
       "source": [
-        "## 2.5 GeeksforGeeks\r\n",
+        "## [2.5 GeeksforGeeks](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A web based tutorial for python available at https://www.geeksforgeeks.org/python-programming-language/\r\n"
       ]
@@ -110,7 +132,7 @@
         "id": "MWxxvQ5nlKBa"
       },
       "source": [
-        "## 2.6 Real Python\r\n",
+        "## [2.6 Real Python](#scrollTo=gVy3YsQGctgo)\r\n",
         "\r\n",
         "A collection of Learning paths for python is available at https://realpython.com/learning-paths/"
       ]
@@ -121,7 +143,7 @@
         "id": "PMlFfUhnZyVK"
       },
       "source": [
-        "# 3 Finxter Email Academy"
+        "# [3. Finxter Email Academy](#scrollTo=hWX0yWCwz1KF)"
       ]
     },
     {
@@ -130,7 +152,7 @@
         "id": "B5iRFF4ZaOQ6"
       },
       "source": [
-        "## 3.1 Python Crash Course\r\n",
+        "## [3.1 Python Crash Course](#scrollTo=PMlFfUhnZyVK)\r\n",
         "\r\n",
         "1. [Python Keywords](#scrollTo=Ud8AoRB2Zg8I)\r\n",
         "1. [Basic Data Types](#scrollTo=J7XZclo9ZcsF)\r\n",
@@ -145,7 +167,7 @@
         "id": "Ud8AoRB2Zg8I"
       },
       "source": [
-        "### [3.1.1 Python Keywords](#scrollTo=PMlFfUhnZyVK)"
+        "### [3.1.1 Python Keywords](#scrollTo=B5iRFF4ZaOQ6)"
       ]
     },
     {
@@ -162,7 +184,7 @@
         "from IPython.display import HTML\r\n",
         "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/mrfzbpfnhq\" width=\"560\" height=\"315\">')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +209,7 @@
         "id": "J7XZclo9ZcsF"
       },
       "source": [
-        "### [3.1.2 Basic Data Types](#scrollTo=PMlFfUhnZyVK)"
+        "### [3.1.2 Basic Data Types](#scrollTo=B5iRFF4ZaOQ6)"
       ]
     },
     {
@@ -203,7 +225,7 @@
       "source": [
         "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/lmx4ap23kp\" width=\"560\" height=\"315\">')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +250,7 @@
         "id": "-wA6UShcZZJc"
       },
       "source": [
-        "### [3.1.3 Complex Data Type](#scrollTo=PMlFfUhnZyVK)"
+        "### [3.1.3 Complex Data Type](#scrollTo=B5iRFF4ZaOQ6)"
       ]
     },
     {
@@ -244,7 +266,7 @@
       "source": [
         "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/a4dz6ofmt3\" width=\"560\" height=\"315\">')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +291,7 @@
         "id": "PmxSvo7RZVEZ"
       },
       "source": [
-        "### [3.1.4 Classes and Objects](#scrollTo=PMlFfUhnZyVK)"
+        "### [3.1.4 Classes and Objects](#scrollTo=B5iRFF4ZaOQ6)"
       ]
     },
     {
@@ -285,7 +307,7 @@
       "source": [
         "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/g1o6xa9gcp\" width=\"560\" height=\"315\">')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +332,7 @@
         "id": "AE2XHNf9ZTJb"
       },
       "source": [
-        "### [3.1.5 Python Tricks](#scrollTo=PMlFfUhnZyVK)\r\n"
+        "### [3.1.5 Python Tricks](#scrollTo=B5iRFF4ZaOQ6)\r\n"
       ]
     },
     {
@@ -326,7 +348,7 @@
       "source": [
         "HTML('<iframe src=\"https://fast.wistia.net/embed/iframe/j8gm5bh67g\" width=\"560\" height=\"315\">')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,6 +365,33 @@
           },
           "execution_count": 5
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sM0lW0gU0sxx"
+      },
+      "source": [
+        "# [4. Learn from the Creators](#scrollTo=hWX0yWCwz1KF)\r\n",
+        "\r\n",
+        "Another effective way to learn is by looking at the source codes written by expert python developers (definetely NOT me 😆).\r\n",
+        "\r\n",
+        "\r\n",
+        "1. [pandas](https://pandas.pydata.org/) - [Source Code](https://github.com/pandas-dev/pandas)\r\n",
+        "1. [NumPy](https://numpy.org/) - [Source Code](https://github.com/numpy/numpy)\r\n",
+        "1. [SciPy](https://scipy.org/) - [Source Code](https://github.com/scipy/scipy)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EfSb9aED-gVR"
+      },
+      "source": [
+        "# [5. References](#scrollTo=hWX0yWCwz1KF)\r\n",
+        "\r\n",
+        "1. [Introduction to Python](https://github.com/SWARUP-Selvaraj/python-training/blob/main/Notebooks/Introduction_to_Python.ipynb)"
       ]
     }
   ]
